test/errors/error3.vult
fun foo() {
   x-y = 1;
}
